# oshirasekun

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.civet  _color.scss  _kue-color.scss  index.civet  styles.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
