[package]
name = "oshirasekun"
version = "0.1.0"
description = "The notification app for Kyoto University of Education"
authors = ["Kyoto University of Education Information Processing Center"]
license = "MIT"
repository = "https://github.com/kue-ipc/oshirasekun"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["http-request", "window-close", "window-show"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding_rs = "0.8.32"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
